# blood-pressure-modeling

./: .gitignore  README.md  __init__.py  pkpd.py  pyproject.toml  requirements.txt  test_imports.py  todos.md
codes/: config.py  cost_functions.py  opti_patient_by_patient.py  parameters_stats.py  pkpd.py  plots.py  results.py  test_casadi.py  utils.py
codes/data/: joachim_meta.txt
data/: injections.csv  joachim.csv
obs/: observer.py  observer_simulation.py
opti/: __init__.py  config.py  cost_functions.py  data_preparation.py  optim.py  optim_legacy.py  optimizer.py  parameters_stats.py  pipeline.py  postprocessing.py
pkpd/: pkpd.py
sensitivity/: __init__.py  metrics.py  pkpd_integrator.py  plots.py  run_sensitivity.py  sensitivity.py  sensitivity_history.py  toy_problem.py
stats/: __init__.py  error_modeling.py  mae_modeling.py  pkpd_parameters.py  pkpd_quality.py
utils/: __init__.py  datatools.py  injections.py  physiological_constants.py  plots.py
