[project]
name = "modeling-bp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "casadi>=3.7.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.15.0",
    "statsmodels>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["opti", "obs", "stats", "utils"]

[tool.hatch.build.targets.wheel.force-include]
"pkpd.py" = "pkpd.py"
